# Spectre-evaluation

./: .gitignore  CMakeLists.txt  README.md  plot_numbers.py  secret.txt  spectre_attacker.c  spectre_mitigated.c  spectre_victim.c  speculative_exec_leak.c
